fix input alignment

--- a/frontend/src/assets/css/button.module.css
+++ b/frontend/src/assets/css/button.module.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
 }
 .group-flex-end{
     display: flex;
