--- a/frontend/src/assets/css/form.module.css
+++ b/frontend/src/assets/css/form.module.css
@@ -1,6 +1,6 @@
 
 .input {
-    width:100%;
+    width:80%;
     font-size: 1.5em;
     padding: 0.2em;
 }
