--- a/frontend/src/assets/css/password.module.css
+++ b/frontend/src/assets/css/password.module.css
@@ -15,5 +15,6 @@
     flex-direction: column;
     gap: 0.5em;
     margin-top: 0.5em !important;
+    margin-left: 2em;
 }
 
